# ExcelMigrationTool

./: .gitignore  README.md  pyproject.toml  requirements.txt
examples/: check_source_data.py  generate_example_files.py  rules.json  simple_migration.py  test_rule_generation.py  verify_output.py
examples/data/: generated_rules.json  source.xlsx  target.xlsx  test_output.xlsx
src/: migrator.py
src/dedaexcelai/: __init__.py  excel_migration.py  logger.py
src/dedaexcelai/excel/: __init__.py  cell_operations.py  column_formulas.py  cost_processor.py  factory.py  file_rules.py  migrator.py  processors.py  services.py  sheet_processor.py  sheet_processor_factory.py  startup_rules.py  structure_analyzer.py  style_manager.py  workbook_handler.py
src/dedaexcelai/excel/core/: factory.py  workbook.py
src/dedaexcelai/excel/models/: elements.py
src/dedaexcelai/excel/processors/: base.py
src/dedaexcelai/excel/rules/: file_rules.py  startup_rules.py
src/dedaexcelai/excel/services/: cost_service.py  element_service.py
src/dedaexcelai/excel/utils/: cell.py  formulas.py  structure.py  styling.py
src/dedaexcelai/llm/: __init__.py  startup_analyzer.py
src/excel_migration/: __init__.py  cli.py
src/excel_migration/core/: analyzers.py  interfaces.py  models.py  processor.py
src/excel_migration/llm/: agents.py  chain.py
src/excel_migration/plugins/: __init__.py  base.py  interfaces.py
src/excel_migration/rules/: engine.py  executor.py
src/excel_migration/tasks/: base.py
src/excel_migration/vision/: processor.py
